2004-10-05  Derek Price  <derek@ximbiot.com>

	* alloca_.h, alloca.c: Import latest versions from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move pathmax.h to its own section.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move unlocked-io.h to its own
	section.
	* unlocked-io.h: Import most recent version from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move regex.h to its own section.
	* regex.c: Import most recent version from GNULIB.

2004-10-05  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "dirname.c" to project to resolve link error.
	* libcvs.dep: Regenerated for "libcvs.dsp" change.
	* libcvs.mak: Regenerated for "libcvs.dsp" change.

2004-10-05  Mark D. Baushke  <mdb@cvshome.org>

	* regex.c (re_comp): Cast gettext return value to char * to
	avoid warning in !ENABLE_NLS case. Patch imported from GNULIB.
	(Problem report from Martin Neitzel <neitzel@sco.gaertner.de>.)

2004-09-09  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.mak: Regenerated for "../cvsnt.dsp" changes made 2004-09-08.

2004-08-27  Derek Price  <derek@ximbiot.com>

	Import minmax module from GNULIB.

	* Makefile.am (libcvs_A_SOURCES): Add minmax.h.
	* minmax.h: New file.

2004-07-13  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore GCC profiling data.

2004-06-24  Derek Price  <derek@ximbiot.com>

	* libcvs.dsp: Add "./xsize.h" to Header file list.  Add "./strftime.c"
	& "./time_r.c" to Source file list.
	* libcvs.dep, libcvs.mak: Regenerated for "./libcvs.dsp" change.
	(Patch submitted by Conrad T. Pino <Conrad@Pino.com>.)

2004-06-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (xsize): Move GNULIB xsize module into its own section.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add strftime.c.
	* strftime.c: New file.

2004-05-17  Derek Price  <derek@ximbiot.com>
