@@ -35,12 +35,12 @@ extern int errno;
 #include "savecwd.h"
 #include "error.h"
 
-char *xgetwd( void );
+char *xgetcwd ( void );
 
 /* Record the location of the current working directory in CWD so that
    the program may change to other directories and later use restore_cwd
    to return to the recorded location.  This function may allocate
-   space using malloc (via xgetwd) or leave a file descriptor open;
+   space using malloc (via xgetcwd) or leave a file descriptor open;
    use free_cwd to perform the necessary free or close.  Upon failure,
    no memory is allocated, any locally opened file descriptors are
    closed;  return non-zero -- in that case, free_cwd need not be
@@ -93,7 +93,7 @@ save_cwd (cwd)
 
   if (!have_working_fchdir)
     {
-      cwd->name = xgetwd ();
+      cwd->name = xgetcwd ();
       if (cwd->name == NULL)
 	{
 	  error (0, errno, "cannot get current directory");
